--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@
 </head>
 <body>
   <div id="app"> </div>
+  <script
+  src="http://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
   <script type="text/javascript" src="/bundle.js"> </script>
 </body>
